# OurChat

./: .clinerules.md  .dockerignore  .env.template  .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  CONTRIBUTING-zh.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.debian  Dockerfile.dev  Dockerfile.prod  Doxyfile  LICENSE  README-zh.md  README.md  _typos.toml  client.key  cobertura.xml  compose.dev.yml  compose.prod.yml  compose.yml  docker-compose.prod.yml  docker-compose.yml  justfile  lcov.info  redis_connect.json  rust-toolchain.toml  xmake.lua
server/: CLAUDE.md  Cargo.toml  build.rs  ourchat.db-shm  ourchat.db-wal
server/base/: Cargo.toml  build.rs
server/base/src/: configs.rs  constants.rs  consts.rs  database.rs  email_client.rs  lib.rs  log.rs  rabbitmq.rs  setting.rs  shutdown.rs  time.rs  types.rs  utils.rs  wrapper.rs
server/client/: Cargo.toml
server/client/src/: helper.rs  http_helper.rs  lib.rs  oc_helper.rs
server/config/: test_user.json
server/consul-client/: Cargo.toml
server/consul-client/src/: client.rs  lib.rs  service.rs
server/derive/: Cargo.toml
server/derive/src/: helper.rs  lib.rs  path.rs  redis.rs  stress_test.rs
server/entities/: Cargo.toml
server/examples/: Cargo.toml
server/examples/plugins/: README.md
server/http_server/: Cargo.toml
server/http_server/src/: httpserver.rs  lib.rs  main.rs  matrix.rs
server/http_server/tests/: http.rs
server/load_balancer/: Cargo.toml  Dockerfile
server/load_balancer/src/: main.rs
server/migration/: Cargo.toml  README.md
server/migration/src/: basic.rs  constants.rs  enums.rs  lib.rs  m20220101_000001_create_table.rs  m20240812_083747_server_manager.rs  m20240829_010832_files.rs  m20241004_135534_operations.rs  m20241210_081859_add_cryption_for_msg.rs  m20241210_083126_create_index.rs  m20241229_022701_add_role_for_session.rs  m20241229_035143_add_data_for_session.rs  m20241230_092258_add_status_for_user.rs  m20250102_091815_add_attr_for_session.rs  m20250102_091815_add_description_for_session.rs  m20250107_153037_record_who_created_role.rs  m20250206_160318_add_user_contact_info.rs  m20250218_093632_server_manage_permission.rs  m20250301_005919_add_soft_delete_columns.rs  m20250315_073350_delete_status_for_users.rs  m20250316_015417_add_preset_user_status.rs  m20250329_120341_add_announcement_table.rs  m20250329_153038_add_permission_link.rs  m20250403_113515_alter_announcement_id.rs  m20250404_114543_rename_user_chat_msg_to_message_records.rs  m20250404_135851_add_is_all_user_in_message_records.rs  m20250404_153258_add_announcement_message_table.rs  m20250405_081542_add_name_for_server_manager_role.rs  m20250524_082226_webrtc_room.rs  m20250531_080259_add_e2ee_on_in_session.rs  m20250607_110239_add_room_key_time_and_leaving_to_process_in_session.rs  m20250607_144007_add_public_key_in_user.rs  m20250609_074125_change_sender_id_to_be_optional_in_message_records.rs  m20250705_113148_change_public_key_from_string_to_bytes.rs  m20250710_090847_add_session_id_to_friend_relation.rs  m20250712_025238_add_e2eeize_and_dee2eeize_session_permission.rs  m20250714_000446_session_invitation.rs  m20250924_053530_webrtc_room.rs  m20251012_075804_role_session_relate.rs  m20251116_064500_add_oauth_fields_to_user.rs  (+18 more)
server/pb/: Cargo.toml  build.rs
server/pb/src/: .gitignore  auth.rs  basic.rs  google.rs  lib.rs  ourchat.rs  registry.rs  service.rs  time.rs
server/plugin/: Cargo.toml  build.rs
server/plugin-sdk/: Cargo.toml  test_gen.rs
server/plugin-sdk/src/: bindings.rs  lib.rs
server/plugin/src/: api.rs  bindings.rs  engine.rs  error.rs  hooks.rs  host.rs  lib.rs  manager.rs  registry.rs
server/plugin/wit/: ourchat.wit
server/plugin_example/: Cargo.toml
server/plugin_example/src/: binding.rs
server/random_test/: Cargo.toml  random_test.toml
server/random_test/src/: actions.rs  config.rs  framework.rs  generator.rs  main.rs  metrics.rs  state.rs  streaming.rs  validators.rs
server/registry/: Cargo.toml
server/registry/src/: consul.rs  lib.rs
server/server_manager/: Cargo.toml
server/server_manager/src/: lib.rs  main.rs
server/server_manager_gui/: Cargo.toml  build.rs
server/server_manager_gui/src/: main.rs
server/server_manager_gui/ui/: app-window.slint
server/src/: basic.rs  cfg.rs  client.rs  cmd.rs  component.rs  config.rs  connection.rs  consts.rs  db.rs  entities.rs  helper.rs  httpserver.rs  lib.rs  main.rs  matrix.rs  metrics.rs  pb.rs  plugin.rs  process.rs  rabbitmq.rs  requests.rs  server.rs  share_state.rs  shared_state.rs  time_format.rs  utils.rs  webrtc.rs
server/src/client/: basic.rs  requests.rs  response.rs
server/src/config/: http.rs
server/src/connection/: basic.rs  client_response.rs  process.rs  response.rs
server/src/db/: compatibility.rs  data_wrapper.rs  file_storage.rs  friend.rs  helper.rs  manager.rs  messages.rs  metrics.rs  process.rs  redis.rs  redis_mappings.rs  session.rs  user.rs
server/src/entities/: authority.rs  chat.rs  chatgroup.rs  files.rs  friend.rs  mod.rs  operations.rs  prelude.rs  server_manager.rs  session.rs  session_relation.rs  user.rs  user_chat_id.rs  user_chat_msg.rs
server/src/httpserver/: avatar.rs  oauth.rs  status.rs  verify.rs
server/src/matrix/: defines.rs
server/src/metrics/: recorder.rs
server/src/pb/: auth.rs  basic.rs  download.rs  email_verify.rs  get_info.rs  login.rs  msg_delivery.rs  ourchat.rs  register.rs  server.rs  service.rs  session.rs  set_info.rs  upload.rs
server/src/plugin/: binding.rs  interface.wit
server/stress_test/: Cargo.toml
server/test_data/: ca.crt  ca.csr  ca.srl  client_ca.srl
server/test_lib/: Cargo.toml
server/tests/: email_verification_test.rs  http.rs  test_auth_register.rs  test_login_register.rs  test_msg_recall.rs  test_session.rs  test_status.rs  test_upload.rs  test_user_info.rs  test_verify.rs
server/utils/: Cargo.toml
server/web-panel/: .gitignore  CLAUDE.md  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.json  vite.config.ts
src/server/: CMakeLists.txt
web/: build.rs  (+1 more)
(+1152 files in other folders)
