[workspace]
members = [
    "server",
    "server/migration",
    "server/derive",
    "server/base",
    "server/load_balancer",
    "server/client",
    "server/stress_test",
    "server/entities",
    "server/pb",
    "server/http_server",
]
resolver = "3"

[profile.release-opt]
inherits = "release"
lto = true
codegen-units = 1
strip = true
# The following options can be used to generate a docker image faster
# export CARGO_PROFILE_RELEASE_LTO=false \
#       CARGO_PROFILE_RELEASE_OPT_LEVEL=3 \
#       CARGO_PROFILE_RELEASE_CODEGEN_UNITS=16
# lto = false
# opt-level = 0

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.87"

[workspace.dependencies]
anyhow = "1"
serde_json = "1"
futures-util = "0"
rand = "0.8.5"
snowdon = "0"
zxcvbn = { version = "3", features = ["ser"] }

thiserror = "2"
tracing = { version = "0" }
tracing-appender = "0"
tracing-subscriber = { version = "0", features = ["tracing-log", "env-filter"] }
mimalloc = "0"
parking_lot = "0"
sha3 = "0"
config = "0"
validator = "0"
console-subscriber = { version = "0", features = ["parking_lot"] }
ring = "0"

# Useful crates
collection_literals = "1"
colored = "3"
strum = { version = "0", features = ["derive"] }
size = { version = "0", features = ["serde"] }

num_enum = "0"
mockall = "0"
async-trait = { version = "0" }
# serde_plain = "1"

# Grpc
prost = { version = "0" }
jsonwebtoken = "9"
tower = { version = "0" }
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0" }
http-body-util = "0"

linkify = "0"
claims = "0"
urlencoding = "2"
dotenvy = "0"
ctor = "0"
scopeguard = "1"
libc-print = "0"
itertools = "0"
fake = "4"
imageinfo = "0"
walkdir = "2"
tonic-build = "0"
http = "1"
http-serde = "2"
email_address = "0"
actix-cors = "0"
actix-files = "0.6"
humantime = "2"
humantime-serde = "1"
secrecy = "0"

[workspace.dependencies.lettre]
version = "0"
default-features = false
features = ["tokio1", "tokio1-rustls-tls", "smtp-transport", "builder"]

[workspace.dependencies.reqwest]
version = "0"
default-features = false
features = ["json", "rustls-tls"]

[workspace.dependencies.tonic]
version = "0.13"
default-features = false
features = ["codegen", "prost", "channel", "transport", "router", "server"]

[workspace.dependencies.sqlx]
version = "0"
default-features = false
features = ["runtime-tokio-rustls", "migrate"]

[workspace.dependencies.sea-orm]
version = "1"
default-features = false
features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros",
    "with-json",
    "with-chrono",
]

[workspace.dependencies.actix-web]
version = "4"
default-features = false
features = ["rustls", "macros"]

[workspace.dependencies.uuid]
version = "1"
default-features = false
features = ["v4", "serde"]

[workspace.dependencies.tokio]
version = "1"
default-features = false
features = ["full", "tracing"]

[workspace.dependencies.bytes]
version = "1"
default-features = false

[workspace.dependencies.serde]
version = "1"
features = ["serde_derive"]

[workspace.dependencies.clap]
version = "4"
default-features = false
features = ["derive"]

[workspace.dependencies.argon2]
version = "0"
default-features = false
features = ["std"]

[workspace.dependencies.dashmap]
version = "6"
default-features = false

[workspace.dependencies.deadpool-redis]
version = "0"
default-features = false
features = ["rt_tokio_1"]

[workspace.dependencies.chrono]
version = "0"
default-features = false
features = ["serde", "now"]

[workspace.dependencies.tokio-stream]
version = "0"
default-features = false

[workspace.dependencies.deadpool-lapin]
version = "0"
default-features = false
features = ["rt_tokio_1"]

[workspace.dependencies.rustls]
version = "0.23"
default-features = false
features = ["ring"]
