[workspace]
members = [
    "server",
    "server/migration",
    "server/derive",
    "server/base",
    "server/client",
    "server/stress_test",
    "server/entities",
    "server/pb",
    "server/utils",
]
resolver = "3"

[profile.release-opt]
inherits = "release"
lto = true
codegen-units = 1
strip = true
# The following options can be used to generate a docker image faster
# export CARGO_PROFILE_RELEASE_LTO=false \
#       CARGO_PROFILE_RELEASE_OPT_LEVEL=3 \
#       CARGO_PROFILE_RELEASE_CODEGEN_UNITS=16
# lto = false
# opt-level = 0

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.91"

[workspace.dependencies.anyhow]
version = "1"
default-features = false

[workspace.dependencies.serde_json]
version = "1"
default-features = false

[workspace.dependencies.rand]
version = "0.10.0-rc.5"
default-features = false
features = ["thread_rng"]

[workspace.dependencies.snowdon]
version = "0"
default-features = false
features = ["lock-free"]

[workspace.dependencies.zxcvbn]
version = "3"
default-features = false
features = ["ser"]

[workspace.dependencies.tokio-cron-scheduler]
version = "0.15.0"
default-features = false

[workspace.dependencies.croner]
version = "3.0.0"
default-features = false
features = ["serde"]

[workspace.dependencies.thiserror]
version = "2"
default-features = false

[workspace.dependencies.tracing]
version = "0"
default-features = false

[workspace.dependencies.tracing-appender]
version = "0"
default-features = false

[workspace.dependencies.tracing-subscriber]
version = "0"
default-features = false
features = ["tracing-log", "ansi"]

[workspace.dependencies.mimalloc]
version = "0"
default-features = false

[workspace.dependencies.parking_lot]
version = "0"
default-features = false

[workspace.dependencies.sha3]
version = "0"
default-features = false

[workspace.dependencies.config]
version = "0"

[workspace.dependencies.console-subscriber]
version = "0"
default-features = false
features = ["parking_lot"]

[workspace.dependencies.ring]
version = "0"
default-features = false

# Useful crates
[workspace.dependencies.collection_literals]
version = "1"
default-features = false

[workspace.dependencies.size]
version = "0"
default-features = false
features = ["serde"]

[workspace.dependencies.num_enum]
version = "0"
default-features = false

[workspace.dependencies.mockall]
version = "0"
default-features = false

[workspace.dependencies.async-trait]
version = "0"
default-features = false

# serde_plain = "1"

# Grpc
[workspace.dependencies.prost]
version = "0.14.1"
default-features = false

[workspace.dependencies.jsonwebtoken]
version = "10.2.0"
default-features = false
features = ["aws_lc_rs"]

[workspace.dependencies.tower]
version = "0"
default-features = false
features = ["full"]

[workspace.dependencies.linkify]
version = "0"
default-features = false

[workspace.dependencies.claims]
version = "0"
default-features = false

[workspace.dependencies.urlencoding]
version = "2"
default-features = false

[workspace.dependencies.dotenvy]
version = "0"
default-features = false

[workspace.dependencies.ctor]
version = "0"
default-features = false
features = ["proc_macro"]

[workspace.dependencies.fake]
version = "4"
default-features = false

[workspace.dependencies.walkdir]
version = "2"
default-features = false

[workspace.dependencies.tonic-prost-build]
version = "0"
default-features = false
features = ["transport", "cleanup-markdown"]

[workspace.dependencies.tonic-prost]
version = "0"
default-features = false

[workspace.dependencies.http]
version = "1"
default-features = false

[workspace.dependencies.http-serde]
version = "2"
default-features = false

[workspace.dependencies.email_address]
version = "0"
default-features = false
features = ["serde_support"]

[workspace.dependencies.humantime]
version = "2"
default-features = false

[workspace.dependencies.humantime-serde]
version = "1"
default-features = false

[workspace.dependencies.secrecy]
version = "0"
default-features = false

[workspace.dependencies.tower-http]
version = "0"
default-features = false
features = ["full"]

[workspace.dependencies.color-eyre]
version = "0"
default-features = false

[workspace.dependencies.axum-server]
version = "0.8"
default-features = false
features = ["tls-rustls"]

[workspace.dependencies.tower_http]
version = "0.6"
default-features = false
features = ["cors", "normalize-path", "fs"]

# # [workspace.dependencies.webrtc]
# version = "0.14.0"
# default-features = false

[workspace.dependencies.rsa]
version = "0.10.0-rc.8"
default-features = false
features = ["encoding", "sha2"]

[workspace.dependencies.cfg-if]
version = "1"
default-features = false

[workspace.dependencies.const_format]
version = "0"
default-features = false

[workspace.dependencies.tower_governor]
version = "0"
default-features = false
features = ["axum"]

[workspace.dependencies.tonic-web]
version = "0.14.2"
default-features = false

[workspace.dependencies.tonic-reflection]
version = "0.14.2"
default-features = false
features = ["server"]

# matrix-sdk = "0.11.0"

[workspace.dependencies.lettre]
version = "0"
default-features = false
features = ["tokio1", "tokio1-rustls-tls", "smtp-transport", "builder"]

[workspace.dependencies.reqwest]
version = "0.13.2"
default-features = false
features = ["json", "rustls"]

[workspace.dependencies.tonic]
version = "0.14.2"
default-features = false
features = ["codegen", "channel", "transport", "router", "server", "_tls-any"]

[workspace.dependencies.sqlx]
version = "0"
default-features = false
features = ["runtime-tokio-rustls", "migrate"]

[workspace.dependencies.sea-orm]
version = "1"
default-features = false
features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros",
    "with-json",
    "with-chrono",
]

[workspace.dependencies.uuid]
version = "1"
default-features = false
features = ["v4", "serde"]

[workspace.dependencies.tokio]
version = "1"
default-features = false
features = ["full", "tracing"]

[workspace.dependencies.bytes]
version = "1"
default-features = false
features = ["serde"]

[workspace.dependencies.serde]
version = "1"
features = ["serde_derive"]

[workspace.dependencies.clap]
version = "4"
default-features = false
features = ["derive"]

[workspace.dependencies.argon2]
version = "0.6.0-rc"
default-features = false
features = ["getrandom", "password-hash", "alloc"]

[workspace.dependencies.dashmap]
version = "6"
default-features = false

[workspace.dependencies.deadpool-redis]
version = "0"
default-features = false
features = ["rt_tokio_1"]

[workspace.dependencies.chrono]
version = "0"
default-features = false
features = ["serde", "now"]

[workspace.dependencies.tokio-stream]
version = "0"
default-features = false

[workspace.dependencies.deadpool-lapin]
version = "0"
default-features = false
features = ["rt_tokio_1"]

[workspace.dependencies.rustls]
version = "0"
default-features = false
features = ["ring", "aws_lc_rs"]

[workspace.dependencies.axum]
version = "0.8"
default-features = false
features = ["macros", "http2", "http1", "json", "tokio", "query"]
