[package]
name = "server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
tokio.workspace = true
bytes.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
# serde_repr = "0"
# tokio-tungstenite = "0"
clap.workspace = true
futures-util.workspace = true
rand.workspace = true
snowdon.workspace = true
redis.workspace = true
sea-orm.workspace = true
thiserror.workspace = true
chrono.workspace = true
base = { path = "base" }
tracing = { version = "0" }
tracing-appender.workspace = true
tracing-subscriber.workspace = true
migration = { path = "migration" }
mimalloc.workspace = true
parking_lot.workspace = true
sqlx.workspace = true
derive = { path = "derive" }
actix-web.workspace = true
dashmap.workspace = true
sha3.workspace = true
uuid.workspace = true
config.workspace = true
validator.workspace = true
argon2.workspace = true
deadpool-redis.workspace = true
console-subscriber.workspace = true
consul-client = { path = "consul-client" }
registry = { path = "registry" }

# Useful crates
collection_literals = "1"
colored = "2"
strum = { version = "0", features = ["derive"] }
size = { version = "0.5.0-preview2", features = ["serde"] }

# num_enum = "0"
mockall = "0"
async-trait = { version = "0" }
# serde_plain = "1"

# Protobuf definitions
pb = { path = "pb" }

entities = { path = "entities" }

tonic = { version = "0", features = ["tls"] }
tonic-types = { version = "0" }
prost-types = { version = "0" }
prost = { version = "0" }
jsonwebtoken = "9"
tokio-stream = { version = "0" }

[dependencies.lettre]
version = "0"
default-features = false
features = ["tokio1", "tokio1-rustls-tls", "smtp-transport", "builder"]

[dev-dependencies]
assert_cmd = "2"
reqwest = "0"
fake = { version = "3" }
linkify = "0"
claims = "0"
client = { path = "client" }

[build-dependencies]
tonic-build = { version = "0" }
anyhow = "1"
