[package]
name = "server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
tokio.workspace = true
bytes.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
# serde_repr = "0"
# tokio-tungstenite = "0"
clap.workspace = true
futures-util.workspace = true
rand.workspace = true
snowdon.workspace = true
sea-orm.workspace = true
thiserror.workspace = true
chrono.workspace = true
base = { path = "base" }
tracing.workspace = true
tracing-appender.workspace = true
tracing-subscriber.workspace = true
migration = { path = "migration" }
mimalloc.workspace = true
parking_lot.workspace = true
sqlx.workspace = true
dashmap.workspace = true
sha3.workspace = true
uuid.workspace = true
config.workspace = true
validator.workspace = true
argon2.workspace = true
deadpool-redis.workspace = true
console-subscriber.workspace = true
fake = { version = "3", optional = true }
urlencoding.workspace = true

# Useful crates
collection_literals.workspace = true
colored.workspace = true
strum.workspace = true
size.workspace = true

# num_enum = "0"
mockall.workspace = true
async-trait.workspace = true
# serde_plain = "1"

# Protobuf definitions
pb = { path = "pb" }

entities = { path = "entities" }

tonic.workspace = true
prost.workspace = true
jsonwebtoken.workspace = true
tokio-stream.workspace = true

lettre.workspace = true
deadpool-lapin.workspace = true

[dev-dependencies]
reqwest.workspace = true
claims.workspace = true
client = { path = "client" }

[build-dependencies]
anyhow.workspace = true

[features]
default = ["meaningful_name"]
meaningful_name = ["dep:fake"]
