[package]
name = "server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
tokio.workspace = true
bytes.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
# serde_repr = "0"
# tokio-tungstenite = "0"
clap.workspace = true
rand.workspace = true
snowdon.workspace = true
sea-orm.workspace = true
thiserror.workspace = true
chrono.workspace = true
base = { path = "base" }
tracing.workspace = true
migration = { path = "migration" }
mimalloc.workspace = true
parking_lot.workspace = true
sqlx.workspace = true
dashmap.workspace = true
sha3.workspace = true
uuid.workspace = true
argon2.workspace = true
deadpool-redis.workspace = true
fake = { workspace = true, optional = true }
zxcvbn.workspace = true
email_address.workspace = true
tower.workspace = true
#secrecy.workspace = true
utils = { path = "utils" }
webrtc.workspace = true
tokio-cron-scheduler.workspace = true
croner.workspace = true

# Useful crates
collection_literals.workspace = true
size.workspace = true
color-eyre.workspace = true

# num_enum = "0"
async-trait.workspace = true
# serde_plain = "1"
dotenvy.workspace = true

# Protobuf definitions
pb = { path = "pb" }

entities = { path = "entities" }

tonic.workspace = true
prost.workspace = true
jsonwebtoken.workspace = true
tokio-stream.workspace = true
rsa.workspace = true

deadpool-lapin.workspace = true

humantime-serde.workspace = true

tower-http.workspace = true
axum.workspace = true
axum-server.workspace = true
http.workspace = true
http-serde.workspace = true
rustls.workspace = true
ctor.workspace = true

#[dependencies.matrix-sdk]
#version = "0"
#default-features = false
#features = ["rustls-tls"]

[dev-dependencies]
claims.workspace = true
client = { path = "client" }
tempfile = "3"
reqwest.workspace = true
linkify.workspace = true

[build-dependencies]
anyhow.workspace = true

[features]
default = ["meaningful_name"]
meaningful_name = ["dep:fake"]
