[package]
name = "base"
edition.workspace = true
version.workspace = true

[dependencies]
shadow-rs = "0"
validator = "0"
serde.workspace = true
anyhow.workspace = true
chrono.workspace = true
sha3.workspace = true
prost-types.workspace = true
ring.workspace = true
size.workspace = true
sea-orm.workspace = true
deadpool-redis.workspace = true
deadpool-lapin.workspace = true
tracing-appender.workspace = true
tracing-subscriber.workspace = true
console-subscriber.workspace = true
sqlx.workspace = true
config.workspace = true
tracing.workspace = true
migration = { path = "../migration" }
lettre.workspace = true
mockall.workspace = true
async-trait.workspace = true
urlencoding.workspace = true
tokio.workspace = true

[build-dependencies]
shadow-rs = "0"
anyhow.workspace = true
