[package]
name = "base"
edition.workspace = true
version.workspace = true

[dependencies]
shadow-rs = "1"
serde.workspace = true
anyhow.workspace = true
chrono.workspace = true
size.workspace = true
sea-orm.workspace = true
deadpool-redis.workspace = true
deadpool-lapin.workspace = true
tracing-appender.workspace = true
tracing-subscriber.workspace = true
console-subscriber.workspace = true
sqlx.workspace = true
config.workspace = true
tracing.workspace = true
migration = { path = "../migration" }
pb = { path = "../pb" }
lettre.workspace = true
mockall.workspace = true
async-trait.workspace = true
urlencoding.workspace = true
tokio.workspace = true
dashmap.workspace = true
parking_lot.workspace = true
rand.workspace = true
email_address.workspace = true
http.workspace = true
http-serde.workspace = true
zxcvbn.workspace = true
utils = { path = "../utils" }
humantime-serde.workspace = true
croner.workspace = true
serde_json.workspace = true
tokio-cron-scheduler.workspace = true
cfg-if.workspace = true
const_format.workspace = true

[build-dependencies]
shadow-rs = "1"
anyhow.workspace = true

[features]
official = []
