[package]
name = "client"
version.workspace = true
edition.workspace = true

[dependencies]
reqwest.workspace = true
fake = { version = "3" }
claims = "0"
base = { path = "../base" }
server = { path = ".." }
parking_lot = "0"
rand = "0"
tokio-stream = { version = "0" }
tonic.workspace = true
prost-types = { version = "0" }
prost = { version = "0" }
sqlx.workspace = true
anyhow = "1"
tracing = { version = "0" }
tokio.workspace = true
uuid.workspace = true
itertools = "0"
pb = { path = "../pb" }
sha3 = "0"
size.workspace = true
thiserror.workspace = true
migration = { path = "../migration" }
sea-orm.workspace = true
