[package]
name = "client"
version.workspace = true
edition.workspace = true

[dependencies]
reqwest.workspace = true
fake.workspace = true
claims.workspace = true
base = { path = "../base" }
server = { path = ".." }
parking_lot.workspace = true
rand.workspace = true
tokio-stream.workspace = true
tonic.workspace = true
prost.workspace = true
sqlx.workspace = true
anyhow.workspace = true
tracing.workspace = true
tokio.workspace = true
uuid.workspace = true
pb = { path = "../pb" }
sha3.workspace = true
size.workspace = true
thiserror.workspace = true
migration = { path = "../migration" }
sea-orm.workspace = true
dotenvy.workspace = true
ctor.workspace = true
urlencoding.workspace = true
chrono.workspace = true
http.workspace = true
utils = { path = "../utils" }
ring.workspace = true
rsa.workspace = true
bytes.workspace = true
serde.workspace = true
deadpool-lapin.workspace = true
redis.workspace = true
