[package]
name = "http_server"
version.workspace = true
edition.workspace = true

[dependencies]
tokio.workspace = true
actix-web.workspace = true
base = { path = "../base" }
anyhow.workspace = true
serde.workspace = true
deadpool-redis.workspace = true
tracing.workspace = true
clap.workspace = true
config.workspace = true
lettre.workspace = true
deadpool-lapin.workspace = true
serde_json.workspace = true
tokio-stream.workspace = true
imageinfo.workspace = true
parking_lot.workspace = true
chrono.workspace = true
ctor.workspace = true
rustls.workspace = true
collection_literals.workspace = true

[dev-dependencies]
client = { path = "../client" }
claims.workspace = true
pb = { path = "../pb" }
parking_lot.workspace = true
tokio-stream.workspace = true
reqwest.workspace = true
linkify.workspace = true
matrix-sdk = "0"
