[package]
name = "http_server"
version.workspace = true
edition.workspace = true

[dependencies]
tokio.workspace = true
actix-web.workspace = true
base = { path = "../base" }
anyhow.workspace = true
serde.workspace = true
deadpool-redis.workspace = true
tracing.workspace = true
clap.workspace = true
deadpool-lapin.workspace = true
serde_json.workspace = true
tokio-stream.workspace = true
imageinfo.workspace = true
parking_lot.workspace = true
ctor.workspace = true
rustls.workspace = true
collection_literals.workspace = true
http.workspace = true
http-serde.workspace = true
email_address.workspace = true
config.workspace = true
actix-cors.workspace = true
mimalloc.workspace = true
actix-files.workspace = true
dotenvy.workspace = true
utils = { path = "../utils" }
actix-tls.workspace = true

[dev-dependencies]
client = { path = "../client" }
claims.workspace = true
pb = { path = "../pb" }
parking_lot.workspace = true
tokio-stream.workspace = true
reqwest.workspace = true
linkify.workspace = true
rustls.workspace = true

[dependencies.matrix-sdk]
version = "0"
default-features = false
features = ["rustls-tls"]
