[package]
name = "load_balancer"
version.workspace = true
edition.workspace = true

[dependencies]
async-trait.workspace = true
base = { path = "../base" }
serde.workspace = true
clap.workspace = true
config.workspace = true

[dependencies.pingora]
version = "0"
default-features = false
features = ["lb", "rustls"]
