[package]
name = "pb"
version.workspace = true
edition.workspace = true

[dependencies]
tonic.workspace = true
anyhow.workspace = true
collection_literals.workspace = true
prost.workspace = true
serde.workspace = true

[build-dependencies]
tonic-build = { version = "0" }
anyhow.workspace = true
walkdir.workspace = true
