[package]
name = "pb"
version.workspace = true
edition.workspace = true

[dependencies]
tonic.workspace = true
anyhow.workspace = true
collection_literals.workspace = true
prost.workspace = true
serde.workspace = true
entities = { path = "../entities" }
chrono.workspace = true

[build-dependencies]
tonic-build.workspace = true
anyhow.workspace = true
walkdir.workspace = true
