[package]
name = "pb"
version.workspace = true
edition.workspace = true

[dependencies]
tonic.workspace = true
tonic-prost.workspace = true
anyhow.workspace = true
collection_literals.workspace = true
prost.workspace = true
serde.workspace = true
entities = { path = "../entities" }
chrono.workspace = true
claims.workspace = true
bytes.workspace = true

[build-dependencies]
tonic-prost-build.workspace = true
anyhow.workspace = true
walkdir.workspace = true
