[package]
name = "plugin"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
# WASM runtime with component model
wasmtime = { version = "41.0.3", features = ["component-model"] }
wasmtime-wasi = "41.0.3"
wasmtime-wasi-http = "41.0.3"

# WIT binding generation
wit-bindgen = "0.53.0"
wit-bindgen-core = "0.53.0"
wit-bindgen-rust = "0.53.0"
wit-component = "0.245.1"

# Serialization
serde.workspace = true
serde_json.workspace = true

# Async runtime
tokio.workspace = true
async-trait.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Logging
tracing.workspace = true

# Shared types
base = { path = "../base" }
entities = { path = "../entities" }

# Utilities
dashmap.workspace = true
parking_lot.workspace = true
uuid.workspace = true
chrono.workspace = true
deadpool-redis.workspace = true

# HTTP client for plugins
reqwest.workspace = true

# URL parsing for HTTP security
url.workspace = true

[build-dependencies]
wit-bindgen-rust = "0.52.0"
