[package]
name = "registry"
version.workspace = true
edition.workspace = true

[dependencies]
tokio = { version = "1", features = ["full"] }

tonic = { version = "0", features = ["tls"] }
tonic-types = { version = "0" }
prost-types = { version = "0" }
prost = { version = "0" }
jsonwebtoken = "9"
tokio-stream = { version = "0" }
# Protobuf definitions
pb = { path = "../pb" }
