[package]
name = "registry"
version.workspace = true
edition.workspace = true

[dependencies]
tokio = { version = "1", features = ["full"] }
anyhow = "1"

tonic = { version = "0", features = ["tls"] }
tonic-types = { version = "0" }
prost-types = { version = "0" }
prost = { version = "0" }
jsonwebtoken = "9"
tokio-stream = { version = "0" }

consul-client = { path = "../consul-client" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
# Protobuf definitions
pb = { path = "../pb" }
