[package]
name = "registry"
version.workspace = true
edition.workspace = true

[dependencies]
tokio.workspace = true
anyhow.workspace = true
tonic.workspace = true
tonic-types.workspace = true
prost-types.workspace = true
prost.workspace = true
jsonwebtoken.workspace = true
tokio-stream.workspace = true

consul-client = { path = "../consul-client" }
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
# Protobuf definitions
pb = { path = "../pb" }
