[package]
name = "stress_test"
version.workspace = true
edition.workspace = true

[dependencies]
tokio.workspace = true
client = { path = "../client" }
tonic.workspace = true
tonic-types = { version = "0" }
prost-types = { version = "0" }
prost = { version = "0" }
server = { path = ".." }
parking_lot.workspace = true
mimalloc.workspace = true
dashmap.workspace = true
clap.workspace = true
anyhow.workspace = true
tracing.workspace = true
pb = { path = "../pb" }
size.workspace = true
base ={ path = "../base" }
