[package]
name = "stress_test"
version.workspace = true
edition.workspace = true

[dependencies]
tokio.workspace = true
client = { path = "../client" }
server = { path = ".." }
parking_lot.workspace = true
mimalloc.workspace = true
dashmap.workspace = true
clap.workspace = true
anyhow.workspace = true
tracing.workspace = true
pb = { path = "../pb" }
size.workspace = true
base = { path = "../base" }
dotenvy.workspace = true
