[package]
name = "test_lib"
version = "0.1.0"
edition = "2021"

[dependencies]
assert_cmd = "2"
serde = { version = "1" }
serde_json = "1"
server = { path = ".." }
anyhow = "1"
tokio-tungstenite = "0"
tungstenite = "0"
tokio = { version = "1", features = ["full"] }
futures-util = "0"
env_logger = "0"
parking_lot = "0"
