[package]
name = "test_lib"
version.workspace = true
edition.workspace = true

[dependencies]
assert_cmd = "2"
serde = { version = "1" }
serde_json = "1"
server = { path = ".." }
anyhow = "1"
tokio-tungstenite = "0"
tungstenite = "0"
tokio = { version = "1", features = ["full"] }
futures-util = "0"
parking_lot = "0"
